--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
 svg {
   background-color: magenta;
 }
+body{
+  background-image: http://wallpapercave.com/wp/nkTc1C9.jpg
+}
+h1 {
+  color: #C81A1A;
+}
+h1 {
+  text-align: center;
+}
+h2{
+  color:#C81A1A;
+}
+h2{
+  text-align: center;
+}
+h3{
+  color: #C81A1A;
+}
+h3{
+  text-align: center;
+}
